--- a/accounts/scammers.yaml
+++ b/accounts/scammers.yaml
@@ -1,2 +1,2 @@
-- name: Scammer
-  address: "UQAjY9I3UKBqxUTM1sB4YSKpqI0kRagNKOBCMFJfkFwygHBI"
+- name: Lizzard Kombat
+  address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
