--- a/accounts/validators.yaml
+++ b/accounts/validators.yaml
@@ -1,98 +1,98 @@
 - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
-  name: "Lizzard Kombat"- address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
   name: "Lizzard Kombat"
-  
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
+  - address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
+  name: "Lizzard Kombat"
