--- a/collections/Booli.yaml
+++ b/collections/Booli.yaml
@@ -1,2 +1,2 @@
-name: Booli Reborn
-address: EQCsCWwWEHS0BaEhcwJ3ft3GEXoC0Xd1CJ3hgASj14-NVb_r
+- name: Lizzard Kombat
+  address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
