--- a/collections/GLOBULA.yaml
+++ b/collections/GLOBULA.yaml
@@ -1,9 +1,9 @@
-name: GLOBULA
-description: "Make a new beginning with this collection of objects and pieces found on the World's map via the GLOBULA interface. The question is: what are you going to do with these?"
-address: "EQAR6-Ja1DjOqsJoFzpQtEvVjwvy6-wExE0nLV5-4rPY_SKN"
+name: Lizzard Kombat
+description: "Lizzard Kombat — это новый мем-коин, которая привлекает внимание инвесторов и энтузиастов благодаря своей уникальности и потенциалу роста. Она основана на интернет-меме «коин LIZZARD», который стал символом юмора, креативности и позитивного настроя в онлайн-сообществе.
+{"
+address: "EQC_pEKAOYs7Imp4PQaN0S9FsWM6lFruKDLn89kKCV8BFovS"
 websites:
-  - "https://globula.space"
+  - "https://lizzardkombat/tilda/ws/"
 social:
-  - "https://t.me/globula_community"
-  - "https://twitter.com/Globula_Game"
-  - "https://discord.gg/rTdZxwkYHk"
+  - "https://t.me/lizzardkombat"
+  - "https://twitter.com/LizzardKombat"
